Revision history for Perl extension PGXN::API

0.14.2

0.14.1  2011-05-12T18:11:02
      - Changed mentions of `pgxn_apid` to the correct `pgxn_api_server` in
        `pgxn_api_server` docs.
      - Backported to support Perl 5.10.

0.14.0  2011-05-03T00:09:13
      - Now require Plack 0.9977 to enable JSONP for all JSON file requests.
      - Fixed test failures on systems where `rsync` is not in the path.
      - Replaced `pgxn_api.psgi` with `pgxn_api_server`. The latter uses
        proper command-line processing and includes all of the functionality
        of `plackup`.

0.13.0  2011-04-30T20:40:21
      - The "name" and "user_name" fields are now full-text indexed in the
        "docs", "dists", and "extensions" indexes. This will allow a search
        such as `user:theory` to return results.

0.12.9  2011-04-30T20:01:29
      - Fixed a test failure in `t/indexer.t` on case-sensitive file systems.
      - Removed use of `env perl` in the `t/bin/testrscync` script. Just use
        `/usr/bin/perl -w` instead and let it be any Perl, not just 5.12.
        Should prevent failures on systems that don't allow arguments to `env`
        and where the system Perl is different than the installating Perl.
      - Added Data::Dump to list of requirements. Was inadvertently omitted.

0.12.8  2011-04-29T21:21:13
      - Some documentation tweaks.
      - First release to CPAN.

0.12.7  2011-04-28T22:28:31
      - Fixed a bug where an updated root `index.json` updated on the mirror
        was not likewise getting updated in the API root.
      - Moved the default `index.html` file so that it will be installed and
        findable when PGXN::API is installed from CPAN.
      - Added a link to the API docs to the default `index.html` file.
      - Renamed the `{char}` variable in the `userlist` URI template to
        `{letter}`, since it better describes the value (an ASCII letter a-z).
      - Search parameters must be submitted via a GET request.
