@@ -34,7 +34,7 @@ sub app {
         enable 'ErrorDocument', 500, '/error', subrequest => 1;
         enable 'HTTPExceptions';
         enable 'StackTrace', no_print_errors => 1;
-        enable 'JSONP', callback_key => 'jsonp';
+        enable 'JSONP', callback_key => 'callback';
         enable sub {
             my $app = shift;
             sub {
