@@ -1,6 +1,7 @@
 Revision history for Perl extension PGXN::API
 
 0.14.2
+      - Changed the JSONP callback parameter from "jsonp" to "callback".
 
 0.14.1  2011-05-12T18:11:02
       - Changed mentions of `pgxn_apid` to the correct `pgxn_api_server` in
